# food-data-ingestion

./: .env.example  .gitignore  README.md  pyproject.toml
database/migrations/: 001_initial_ingestion_schema.sql  002_add_raw_document_parser_version.sql  003_add_content_dedup_and_raw_constraints.sql  004_add_discovered_place_candidates.sql  (+1 more)
docs/: architecture.md  crawling-rules.md  data-model.md  implementation-spec.md  overview.md
docs/notes/: README.md  (+2 more)
tests/: test_advisory_lock.py  test_article_discovery.py  test_article_discovery_unified_flow.py  test_cache_repository.py  test_candylife_cli.py  test_candylife_connector.py  test_candylife_db_factory.py  test_candylife_discovery_job.py  test_candylife_extractor.py  test_candylife_feed.py  test_candylife_ingestion.py  test_candylife_live_fetcher.py  test_candylife_policy_profile.py  test_candylife_source_target_cli.py  test_candylife_source_target_job.py  test_crawl_job_repository.py  test_discovered_candidate_repository.py  test_google_places_connector.py  test_google_places_db_smoke.py  test_google_places_parser.py  test_ingestion_context.py  test_ingestion_service.py  test_place_enrichment_service.py  test_psycopg_session.py  test_raw_repository.py  test_restaurant_repository.py  test_run_discovery_cli.py  test_run_google_places_sync.py  test_settings.py  test_source_target_repository.py  test_supertaste_article_parser.py  test_supertaste_cli.py  test_supertaste_connector.py  test_supertaste_ingestion.py  test_supertaste_policy_profile.py  test_supertaste_sitemap_parser.py  test_unified_discovery_ingestion.py
(+64 files in other folders)
