[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "food-data-ingestion"
version = "0.1.0"
description = "Standalone food data ingestion project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "psycopg[binary]>=3.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
